--- a/Web_Project/WebApp/Templates/product-list.html
+++ b/Web_Project/WebApp/Templates/product-list.html
@@ -229,45 +229,36 @@
 
                                     <div class="form-group">
 
-                                        <input class="form-check-input" name="price" type="radio" value="100000" id="VND0100_price">
+                                        <input class="form-check-input" name="price" type="radio" value="0_3" id="VND0100_price">
 
                                         <label for="VND0100_price" class="form-check-label dark-grey-text">0 -
-                                            100.000đ</label>
-
-                                    </div>
-
-                                    <div class="form-group">
-
-                                        <input class="form-check-input" name="price" type="radio" value="300000" id="VND100300_price">
-
-                                        <label for="VND100300_price" class="form-check-label dark-grey-text">0đ -
                                             300.000đ</label>
 
                                     </div>
 
                                     <div class="form-group">
 
-                                        <input class="form-check-input" name="price" type="radio" value="500000" id="VND300500_price">
+                                        <input class="form-check-input" name="price" type="radio" value="3_6" id="VND100300_price">
 
-                                        <label for="VND300500_price" class="form-check-label dark-grey-text">0đ -
-                                            500.000đ</label>
-
-                                    </div>
-
-                                    <div class="form-group">
-
-                                        <input class="form-check-input" name="price" type="radio" value="1000000" id="VND5001m_price">
-
-                                        <label for="VND5001m_price" class="form-check-label dark-grey-text">0đ -
-                                            1.000.000đ</label>
+                                        <label for="VND100300_price" class="form-check-label dark-grey-text">300.000đ -
+                                            600.000đ</label>
 
                                     </div>
 
                                     <div class="form-group">
 
-                                        <input class="form-check-input" name="price" type="radio" value="10000000" id="VND1m_price">
+                                        <input class="form-check-input" name="price" type="radio" value="6_10" id="VND300500_price">
 
-                                        <label for="VND1m_price" class="form-check-label dark-grey-text">Hơn
+                                        <label for="VND300500_price" class="form-check-label dark-grey-text">600.000đ -
+                                            1000.000đ</label>
+
+                                    </div>
+
+                                    <div class="form-group">
+
+                                        <input class="form-check-input" name="price" type="radio" value="10_" id="VND5001m_price">
+
+                                        <label for="VND5001m_price" class="form-check-label dark-grey-text">Hơn
                                             1.000.000đ</label>
 
                                     </div>
