--- a/Web_Project/WebApp/Templates/Form/form_deleteProduct.html
+++ b/Web_Project/WebApp/Templates/Form/form_deleteProduct.html
@@ -47,7 +47,7 @@
         </div>
         <div class="modal-body text-left">
             <p>
-                Bạn có chắc muốn xóa sản phẩm <b>{{item.id_product}}</b> ?
+                Bạn có chắc muốn xóa sản phẩm <b><span style="text-transform: capitalize;">{{item.id_product}}</span></b> ?
             </p>
         </div>
         <div class="modal-footer">
