--- a/Web_Project/WebApp/Templates/Base_Product_User.html
+++ b/Web_Project/WebApp/Templates/Base_Product_User.html
@@ -67,7 +67,7 @@
                             <!-- Order Total Money -->
                             <div class="col">
                                 <div class="text-center" style="color: black; margin-top: 5%;">
-                                    <!-- {{od.id_cart.CreateAt}} --> Fixing
+                                    {{od.id_cart.total_price}} VNĐ
                                 </div>
                             </div>
 
