--- a/Web_Project/WebApp/Templates/Form/form_orderInfo.html
+++ b/Web_Project/WebApp/Templates/Form/form_orderInfo.html
@@ -104,7 +104,7 @@
                                 <td></td>
                                 <td></td>
                                 <td><strong>Tổng tiền</strong></td>
-                                <td class="text-right align-middle"><strong>{{total|floatformat:'-1'}} VNĐ</strong></td>
+                                <td class="text-right align-middle"><strong>{{od.id_cart.total_price}} VNĐ</strong></td>
                             </tr>
                         </tr>
                     </tbody>
