--- a/Web_Project/WebApp/Templates/Base_History.html
+++ b/Web_Project/WebApp/Templates/Base_History.html
@@ -2,58 +2,111 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
-    <link href="/static/css/fontawesome-all.css" rel="stylesheet">
-    <link href="/static/css/swiper.css" rel="stylesheet">
-	<link href="/static/css/magnific-popup.css" rel="stylesheet">
-    <link href="/static/css/styles_base_UI_home.css" rel="stylesheet">
-    <style>
-        .history {
-            color: #14bf98!important;
-        }
-    </style>
+    <title>History</title>
 </head>
+
+<script>
+    
+</script>
 <body>
-    <section class="jumbotron jumbotron-fluid" style="background-color: transparent;">
-        <div class="container">
-            {% include 'NavigationBar/nav_User_or_Manager.html' %}
-         </div>
-    </section>
 
-    <div class="container">
+    {% include 'NavigationBar/nav_User_or_Manager.html' %}
+
+    <div class="container" style="margin-top:120px">
         <div class="row">
-            <div class="col-12">
-                <div class="table-responsive">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr class = "text-center">
-                                <th scope="col" class="text-left">STT</th>
-                                <th scope="col">Đơn Hàng</th>
-                                <th scope="col">Ngày mua</th>
-                                <th scope="col">Tổng tiền</th>
-                                <th> </th>
-                            </tr>
-                        </thead>
+            <div class="col-lg-12 mx-auto">
+                <!-- List group-->
+                <ul class="list-group shadow">
+                    <!-- list group item -->
+                    <li class="list-group-item list-group list-group-item-secondary" 
+                    style="font-family: 'Open Sans Condensed';">
+                        <div class = "row text-center">
+                            <div class="col text-left">
+                                <h6>Đơn hàng của bạn</h6>
+                            </div>
 
-                        <tbody>
-                            {% for od in order %}
-                                {% if od.status == 'completed' %}
-                                    <tr class = "text-center">
-                                        <td>{{ forloop.counter}}</td>
-                                        <td> Số {{ forloop.counter }}</td>
-                                        <td> {{od.id_cart.CreateAt}}</td>
-                                        <td> {{od.id_cart.total_price}} VNĐ</td>
-                                    </tr>
-                                {% endif %}
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+                            <div class="col">
+                                <h6>Tổng tiền</h6>
+                            </div>
+                            
+                            <div class="col-2 text-center">
+                                <h6>Trạng thái</h6>
+                            </div>
+
+                            <div class="col-2 text-right">
+                                <h6>Tùy chọn</h6>
+                            </div>
+                        </div>
+                    </li> <!-- End -->
+                </ul> <!-- End -->
             </div>
         </div>
-    </div>   
+
+        {% for od in order %}
+        {% if od.status == 'completed' %}
+        <div class="row">
+            <div class="col-lg-12 mx-auto">
+                <!-- List group-->
+                <ul class="list-group shadow">
+                    <!-- list group item -->
+                    <li class="list-group-item list-group-item-action list-group-item-light">
+                        <div class = "row text-center">
+                            <!-- Order Info -->
+                            <div class="col font-weight-bold">
+                                <div class="text-left" style="color: black;">
+                                    {{od.id_cart.CreateAt}}
+                                </div>
+                                <div></div>
+                                <div class="text-right" style="margin-top:10px">
+                                    <button type="button" class="btn btn-sm btn-info" data-toggle="modal" data-target="#order_detail_{{od.id}}">
+                                        Xem chi tiết
+                                    </button>
+                                </div>
+                            </div>
+
+                            <!-- Order Total Money -->
+                            <div class="col font-weight-bold">
+                                <div class="text-center" style="color: black;">
+                                    {{od.id_cart.total_price}} VNĐ
+                                </div>
+                            </div>
+
+                            <!-- Order Status -->
+                            <div class="col-2 font-weight-bold">
+                                <div class="text-center" 
+                                    style="color: black; text-transform: capitalize;"> 
+                                    {% if od.status == 'shipping' %}
+                                        <i class="fas fa-shipping-fast" style="margin-right: 10px"></i>
+                                    {% elif od.status == 'pending' %}
+                                        <i class="fas fa-clock" style="margin-right: 10px"></i>
+                                    {% elif od.status == 'pending' %}
+                                    <i class="fas fa-dollar-sign" style="margin-right: 10px"></i>
+                                    {% endif %}
+
+                                    {{ od.status }}
+                                </div>
+                            </div>
+
+                            <div class="col-2 text-right" style="color: black;">
+                                <button type="button" class="btn btn-sm btn-danger fas fa-trash" 
+                                        data-toggle="modal" data-target="#cancel_order_form_{{od.id}}" 
+                                        style="margin-top: 10%" disabled>
+                                </button>
+                            </div>
+                        </div>
+                    </li> <!-- End -->
+                </ul> <!-- End -->
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+
+        {% for od in order %}
+            {% include 'Form/form_userInfo.html' %}
+            {% include 'Form/form_orderInfo.html' %}
+            {% include 'Form/form_cancelOrder.html' %}
+        {% endfor %}
+
+    </div>
 </body>
 </html>
