--- a/Web_Project/WebApp/Templates/Base_ViewCart.html
+++ b/Web_Project/WebApp/Templates/Base_ViewCart.html
@@ -36,7 +36,7 @@
                                 <th scope="col" class="text-center">Số lượng</th>
                                 <th scope="col" class="text-center">Đơn giá</th>
                                 <th scope="col" class="text-center">Thành tiền</th>
-                                <th> </th>
+                                <th scope="col" class="text-right">Tùy chọn</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -95,8 +95,8 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td class="align-middle">Vận chuyển</td>
-                                <td class="text-right align-middle">Miễn phí</td>
+                                <td class="align-middle font-weight-bold">Vận chuyển</td>
+                                <td class="text-right align-middle font-weight-bold">Miễn phí</td>
                             </tr>
                             
                             <!-- Total Money -->
@@ -106,8 +106,8 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td><strong>Tổng tiền</strong></td>
-                                <td class="text-right align-middle"><strong>{{total|floatformat:'-1'}} VNĐ</strong></td>
+                                <td class="font-weight-bold">Tổng tiền</td>
+                                <td class="text-right align-middle font-weight-bold">{{total|floatformat:'-1'}} VNĐ</td>
                             </tr>
                             {% endif %}
                         </tbody>
