--- a/Web_Project/WebApp/Templates/Manager_View.html
+++ b/Web_Project/WebApp/Templates/Manager_View.html
@@ -13,7 +13,7 @@
 
     {% include 'NavigationBar/nav_User_or_Manager.html' %}
 
-    <div class="container" style="margin-top:120px">
+    <div class="container-fluid" style="margin-top:120px">
         <div class="row">
             <div class="col-lg-12 mx-auto">
                 <!-- List group-->
@@ -70,7 +70,7 @@
                             </div>
 
                             <!-- Order Info -->
-                            <div class="col-3">
+                            <div class="col-3 font-weight-bold">
                                 <div class="text-left" style="color: black;">
                                     {{od.id_cart.CreateAt}}
                                 </div>
@@ -83,17 +83,17 @@
                             </div>
 
                             <!-- Order address -->
-                            <div class="col-3">
+                            <div class="col-3 font-weight-bold">
                                 <div class="text-center" 
-                                style="color: black; text-transform: capitalize; margin-top: 9%;"> 
+                                style="color: black; text-transform: capitalize;"> 
                                     {{ od.address }}
                                 </div>
                             </div>
 
                             <!-- Order Status -->
-                            <div class="col">
+                            <div class="col font-weight-bold">
                                 <div class="text-center" id="order_{{od.id}}_status"
-                                style="color: black; text-transform: capitalize; margin-top: 20%;">
+                                style="color: black; text-transform: capitalize;">
                                     {{ od.status }}
                                 </div>
                             </div>
@@ -102,7 +102,7 @@
 
                             <div class="col text-right">
                                 <!-- <button ><i class="fas fa-check"></i></button> -->
-                                <div style="margin-top: 20%;">
+                                <div style="margin-top: 15%;">
                                 {% if od.status == 'pending' %}
                                     <button>
                                         <a href="{% url 'Page:page_confirm' od.id %}" class="fas fa-check" style="text-decoration: none">Confirm</a>
